<resources>
    <string name="app_name">Aqua Rewa</string>
    <string name="selected_card_view">#244AC7EF</string>
    <string name="card_view">#80D9D9D9</string>
    <string name="addwater">addWater</string>
    <!-- TODO: Remove or changeUserDetails this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_picker_formatter">number_picker_formatter</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="_100ml">100ml</string>
    <string name="_200ml">200ml</string>
    <string name="_250ml">250ml</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="empty_log">EMPTY LOG!</string>
    <string name="openDrawer">Open Navigation Drawer</string>
    <string name="closeDrawer">Close Navigation Drawer</string>
    <string name="white">FFFFFF</string>
    <string name="quote1">"Water is the only drink for a wise man."</string>
    <string name="quote1Author">                -Henry David Thoreau</string>
    <string name="introText">Let us be your companion on this journey towards a well-hydrated lifestyle.</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="your_weight">Your Weight</string>
    <string name="weight_quote">The more the weight the more water you need.</string>
    <string name="kg">Kg</string>
    <string name="lbs">lbs</string>
    <string name="activity_level">Activity Level</string>
    <string name="activity_level_quote">The more you burn your calories the more you need fluids to stay hydrated.</string>
    <string name="weather">Weather</string>
    <string name="weather_quote">The more the temperature you live in the more you need fluids to stay hydrated.</string>
    <string name="loading">Loading</string>
    <string name="updating">Updating...</string>
    <string name="your_daily_goal">Your Daily Goal</string>
    <string name="enter_your_name">*Complete the Fields</string>
    <string name="sedentary_quote">Gentle activity with minimal movement, promoting exercise in a seated or stationary position.</string>
    <string name="light_quote">Mild physical exertion that increases heart rate and promotes movement without significant strain.</string>
    <string name="moderate_quote">Moderate level of physical exertion that elevates heart rate and breathing, contributing to overall fitness and well-being.</string>
    <string name="high_quote">Intense physical effort that challenges the body, pushing limits and promoting significant cardiovascular and muscular engagement.</string>
    <string name="fl_oz">fl oz</string>
    <string name="ml">ml</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="reminder_schcedule">Reminder Schcedule</string>
    <string name="reminder_schedule">Reminder Schedule</string>
    <string name="reminder_sound">Reminder Sound</string>
    <string name="further_reminder">Further Reminder</string>
    <string name="general_settings">General Settings</string>
    <string name="unit">Unit</string>
    <string name="language">Language</string>
    <string name="personal_data">Personal Data</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="reminder_interval">Reminder Interval</string>
    <string name="wakeup_and_sleep_schedule">WakeUp and Sleep Schedule</string>
    <string name="every">Every</string>
    <string name="minutes">minutes</string>
    <string name="sleep_schedule">Sleep Schedule</string>
    <string name="sleep_quote">Your Sleep helps us to know when to Remind you</string>
    <string name="save">Save</string>
    <string name="exit_txt">Dou you really want to exit?</string>
</resources>