<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_150sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_box_shape"
    android:forceDarkAllowed="false"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp"
        android:layout_margin="@dimen/_7sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/maleRadioButton"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:buttonTint="#83F0FF"
        android:text="@string/male" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/femaleRadioButton"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ok_button_gender"
            android:padding="@dimen/_10sdp"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/cancel_button_gender"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            app:layout_constraintRight_toLeftOf="@id/ok_button_gender"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>