<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onBoardings.mainOnBoardingSplash">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/onBoardAnimation"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_70sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/on_boarding_water"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_270sdp">
    </com.airbnb.lottie.LottieAnimationView>
    <TextView
        android:id="@+id/quote1"
        android:text="@string/quote1"
        app:layout_constraintTop_toBottomOf="@id/onBoardAnimation"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:textStyle="italic"
        android:textSize="@dimen/_12ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:id="@+id/quote1Author"
        android:text="@string/quote1Author"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/_50sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quote1"
        android:layout_height="wrap_content">

    </TextView>

    <TextView
        android:id="@+id/introTextOnBord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/_40sdp"
        android:paddingStart="@dimen/_20sdp"
        android:text="@string/introText"
        android:textColor="#80000000"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:flow_wrapMode="chain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn"
        android:layout_marginBottom="@dimen/_20sdp"
        tools:ignore="RtlSymmetry">

    </TextView>
    <Button
        android:id="@+id/btn"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:textStyle="italic"
        app:layout_constraintBaseline_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_35sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>
    <ImageView
        android:id="@+id/toggle"
        android:src="@drawable/ring"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp">
    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>