<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="@dimen/_40sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.settingsManager.reminderScheduleReminder">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/backButton"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"/>
        <androidx.cardview.widget.CardView
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_2sdp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/wakeup_and_sleep_schedule"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/_7sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_margin="@dimen/_7sdp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="@dimen/_24ssp"
                        android:id="@+id/wakeUpTime"
                        android:textColor="#C442BBEE"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:text="-"
                        android:textSize="@dimen/_24ssp"
                        android:layout_gravity="center_vertical"
                        android:textColor="#C442BBEE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="@dimen/_24ssp"
                        android:id="@+id/sleepTime"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textColor="#C442BBEE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_2sdp"
            android:layout_height="@dimen/_80sdp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/reminder_interval"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15ssp"
                    android:layout_margin="@dimen/_7sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_margin="@dimen/_7sdp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/every"
                        android:textSize="@dimen/_20ssp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:textSize="@dimen/_20ssp"
                        android:id="@+id/timeIntervalPicker"
                        android:textColor="#C442BBEE"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="@dimen/_20ssp"
                        android:text="@string/minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>