<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:forceDarkAllowed="false"

    android:scrollbars="none"
    android:layout_height="match_parent"
    tools:context=".onBoardings.onBoardingNameAndGender">
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".onBoardings.onBoardingNameAndGender">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_35sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ring_completed"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp">

                </ImageView>
                <ImageView
                    android:src="@drawable/ring"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_4sdp">

                </ImageView>
                <ImageView
                    android:src="@drawable/ring"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_4sdp">

                </ImageView>
                <ImageView
                    android:src="@drawable/ring"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_4sdp">

                </ImageView>
                <ImageView
                    android:src="@drawable/ring"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_4sdp">

                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayoutName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_75sdp">
                <TextView
                    android:id="@+id/nameTextView"
                    android:text="@string/name"
                    android:textColor="@color/black"

                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"

                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="@dimen/_220sdp"
                    app:startIconDrawable="@drawable/baseline_man_2_24"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:boxBackgroundColor="#9ED9D9D9"
                    app:boxCornerRadiusBottomEnd="30dp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName"
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:layout_gravity="center"
                        android:hint="@string/name">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="@dimen/_100sdp"
                    app:startIconDrawable="@drawable/baseline_man_2_24"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:boxBackgroundColor="#9ED9D9D9"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberSigned"
                        android:maxLength="3"
                        android:id="@+id/ageEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:layout_gravity="center"
                        android:hint="Age">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/warning"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:textColor="#D21312"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutGender"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutName"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/gender"
                    android:textColor="@color/black"

                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginStart="@dimen/_55sdp"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/imageBoy"
                            android:src="@drawable/boy"
                            app:riv_corner_radius="@dimen/_40sdp"
                            android:scaleType="centerCrop"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp">
                        </com.makeramen.roundedimageview.RoundedImageView>
                        <TextView
                            android:id="@+id/maleTextView"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/male"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"
                            android:textColor="@color/black"

                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginEnd="@dimen/_55sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/imageGirl"
                            android:src="@drawable/girl"
                            android:scaleType="centerCrop"
                            app:riv_corner_radius="@dimen/_40sdp"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp">
                        </com.makeramen.roundedimageview.RoundedImageView>
                        <TextView
                            android:id="@+id/femaleTextView"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/female"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"

                            android:layout_height="wrap_content">

                        </TextView>
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/prevButtonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:backgroundTint="#4AC7EF"
        app:maxImageSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:fabCustomSize="@dimen/_40sdp"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextButtonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:backgroundTint="#4AC7EF"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>